# MCP-OPENAPI-DOCX

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  INSTALLATION.md  MCP_PROTOCOL.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
kubernetes/: configmap.yaml  deployment.yaml  persistent-volume.yaml  service.yaml
scripts/: init_db.py  run_mcp.py  run_server.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: __init__.py  batch.py  comments.py  documents.py  export.py  health.py  layout.py  lists.py  media.py  metadata.py  revisions.py  search.py  security.py  styles.py  tables.py  templates.py  text.py  toc.py
src/core/: __init__.py  config.py  constants.py  enums.py  exceptions.py
src/database/: __init__.py  base.py  session.py
src/handlers/: __init__.py  comment_handler.py  document_handler.py  layout_handler.py  list_handler.py  media_handler.py  revision_handler.py  style_handler.py  table_handler.py  text_handler.py  toc_handler.py
src/mcp/: __init__.py  handlers.py  resources.py  server.py  tools.py
src/middleware/: __init__.py  auth_middleware.py  error_middleware.py  logging_middleware.py
src/models/: __init__.py  database.py  dto.py  schemas.py
src/services/: __init__.py  comment_service.py  document_service.py  export_service.py  layout_service.py  list_service.py  media_service.py  revision_service.py  search_service.py  security_service.py  style_service.py  table_service.py  template_service.py  text_service.py  toc_service.py  version_service.py
src/tasks/: __init__.py  celery_app.py  document_tasks.py  notification_tasks.py
src/utils/: __init__.py  cache_utils.py  compression_utils.py  conversion_utils.py  file_utils.py  logging_utils.py  security_utils.py  validation_utils.py
tests/: conftest.py
tests/fixtures/: __init__.py  factories.py
tests/integration/api/: test_api.py
tests/integration/mcp/: test_mcp.py
tests/unit/api/: test_routes.py
tests/unit/handlers/: test_document_handler.py  test_table_handler.py  test_text_handler.py
tests/unit/services/: test_services.py
tests/unit/utils/: test_utils.py
